# pikafish-xiangqi-gui

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v1.0.0.md  check_engines.ps1  install_pikafish.ps1  package_release.ps1
src/: CMakeLists.txt  main.cpp
